@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.45 2005/01/26 02:18:55 port001 Exp $
+# $Id: ChangeLog,v 1.46 2005/01/26 03:59:01 hadfield Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
@@ -19,7 +19,8 @@ CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
    _is_odd, and _is_even.
  * Implemented the memberlist page
  * Added favorite language to the user table
-
+ * Implemented a user registration page
+	 
 24 Jan 2005; Scott Hadfield <hadfield@gentoo.org>
  * Initial code for the memberlist page written
  * Added 'location' and 'website' fields to the user table.
